// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElementDefinitionRuleRender NoSimilar render NoSimilar with content ,href and content limit 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      所属页面
    </span>
     中，
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      当前位置
    </span>
    ，限定
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      元素内容
      为
      「
      元素内容元素内容元素内容元素内容元素内容元素内容元素内容...
      」
    </span>
    的元素。
    <span>
      若元素的内容改变，就不再继续统计了。
    </span>
    <span>
      即使元素跳转链接改变，也会继续统计。
    </span>
  </span>
</div>
`;

exports[`ElementDefinitionRuleRender NoSimilar render NoSimilar without attrs and without limit 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      所属页面
    </span>
     中，
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      当前位置
    </span>
    的元素。
    <span />
    <span />
  </span>
</div>
`;

exports[`ElementDefinitionRuleRender NoSimilar render NoSimilar without content ,href 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      所属页面
    </span>
     中，
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      当前位置
    </span>
    ，限定
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      元素内容
      为
      「
      元素内容
      」
    </span>
    的元素。
    <span />
    <span />
  </span>
</div>
`;

exports[`ElementDefinitionRuleRender NoSimilar render NoSimilar without content and href limit 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      所属页面
    </span>
     中，
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      当前位置
    </span>
    ，限定
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      跳转链接
    </span>
    的元素。
    <span>
      若元素的跳转链接改变，就不再继续统计了。
    </span>
    <span />
  </span>
</div>
`;

exports[`ElementDefinitionRuleRender NoSimilar render NoSimilar without content and without limit 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      所属页面
    </span>
     中，
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      当前位置
    </span>
    的元素。
    <span />
    <span>
      即使元素跳转链接改变，也会继续统计。
    </span>
  </span>
</div>
`;

exports[`ElementDefinitionRuleRender NoSimilar render with content and content limit 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      所属页面
    </span>
     中，
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      当前位置
    </span>
    ，限定
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      元素内容
      为
      「
      元素内容
      」
    </span>
    ，限定
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      跳转链接
    </span>
    的元素。
    <span>
      若元素的内容改变，就不再继续统计了。
    </span>
    <span />
  </span>
</div>
`;

exports[`ElementDefinitionRuleRender NoSimilar render with content and contentType=match_phrase limit 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      所属页面
    </span>
     中，
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      同类元素内
    </span>
    ，限定
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      元素内容
      包含
      「
      元素内容
      」
    </span>
    的元素。
    <span>
      若元素的内容改变，就不再继续统计了。
    </span>
    <span>
      即使元素位置和跳转链接改变，也会继续统计。
    </span>
  </span>
</div>
`;

exports[`ElementDefinitionRuleRender NoSimilar render with repeatTag 1`] = `
<div>
  <span>
    <span>
      该规则已被 
      <b>
        zhangxueqi
      </b>
       定义为
      <span>
        【
        定义一个新的事件2
        】。
      </span>
    </span>
    现在定义的是 
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      所属页面
    </span>
     中，
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      同类元素内
    </span>
    ，限定
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      元素内容
      为
      「
      主页
      」
    </span>
    ，
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      元素位置为「第0位」
    </span>
    ，限定
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      跳转链接
    </span>
    的元素。
    <span>
      若元素的内容、位置或跳转链接改变，就不再继续统计了。
    </span>
    <span />
  </span>
</div>
`;

exports[`ElementDefinitionRuleRender NoSimilar render without limit 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
      style="color: rgb(56, 103, 244);"
    >
      所属页面
    </span>
     中，
    <span>
      所有同类元素的数据之和。我们已经将这组同类元素用虚线框标记出来。
    </span>
  </span>
</div>
`;
